Fixed issues with editor overflow, added favicon and meta tags

--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,9 @@ a {
 
 .wrapper {
     height: 100vh;
-    padding-top: 3.2rem;
-    background-color:#f4f4f4;    
+    overflow: auto;
+    padding-top: 5.725rem;
+    background-color: #f4f4f4;
 }
 
 .grid-container {
@@ -279,19 +280,20 @@ nav ul li a i.fa-star {
 }
 
 .ql-toolbar {
+    position: fixed;
+    top: 3.125rem;
     width: 100%;
     z-index: 100;
     background: var(--toolbar-color);
 }
 
 .ql-editor {
-    width:100vw;
-    height:100vh;
     background-color: white;
-    padding:2.5rem 1.5rem;
+    padding: 2.5rem 1.5rem;
     z-index: 20;
     border: none;
     outline: none;
+    overflow: auto;
 }
 
 /*
@@ -422,9 +424,13 @@ nav ul li a i.fa-star {
     pointer-events: all;
 }
 
-/* Scrollbar styles */
-/* width */
+/* 
+=======================================================
+====== Scrollbar styles ===============================
+=======================================================
+*/
 
+/* width */
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -464,15 +470,26 @@ nav ul li a i.fa-star {
     align-items: center;
 }
 
-@media (min-width: 1279px){
-   .ql-editor{
-    width: 210mm;
-    height:297mm;
-    margin: 10px auto;
-    background-color: white;
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.1);
-    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.1);
-    padding: 4rem 3rem;
-   }
+@media (min-width: 1279px) {
+
+    .wrapper {
+        padding-top: 5.725rem;
+    }
+
+    #editor {
+        padding-bottom: 2.5rem;
+        padding-top: 2.5rem;
+        overflow: auto;
+    }
+
+    .ql-editor {
+        width: 210mm;
+        height: 297mm;
+        margin: 0 auto;
+        background-color: white;
+        -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+        padding: 4rem 3rem;
+    }
 }
